--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,6 @@
   <p>
     <a href="{{ "/" | prepend: site.baseurl }}">Home</a><span
           <span class="u-separate"></span> <a href="{{ "/about/" | prepend: site.baseurl }}">About</a>
+          <span class="u-separate"></span> <a href="{{ "/research/" | prepend: site.baseurl }}">Research</a>
   </p>
 </header>
