--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,5 +7,6 @@
     <a href="{{ "/" | prepend: site.baseurl }}">Home</a><span
           <span class="u-separate"></span> <a href="{{ "/about/" | prepend: site.baseurl }}">About</a>
           <span class="u-separate"></span> <a href="{{ "/research/" | prepend: site.baseurl }}">Research</a>
+          <span class="u-separate"></span> <a href="{{ "/work/" | prepend: site.baseurl }}">Work Experience</a>
   </p>
 </header>
